--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.29.0
 python-multipart==0.0.9
 python-dotenv==1.0.1
 pydantic-settings==2.2.1
+aiofiles==23.2.1
 langchain==0.1.20
 PyMuPDF==1.24.3
 motor==3.4.0
@@ -14,8 +15,7 @@ asyncpg==0.30.0
 alembic==1.14.0
 psycopg2==2.9.10
 pytest==8.3.4
-bs4==4.13.3
 tokenizers==0.13.3
-chromadb==0.5.23
-
+chromadb==1.0.5
+tavily-python==0.5.4
 
